added api route to get all sensors for a device
